# secure-element-records-demo

./: .gitattributes  .gitignore  AGENTS.md  README.md
device-app/: Cargo.toml
device-app/.github/: instructions
device-app/ledger-app-ai-instructions/: CLAUDE.md  README.md
device-app/ledger-app-ai-instructions/instructions/: C.instructions.md  EMBEDDED.instructions.md  REVIEW.instructions.md  RUST.instructions.md  TEST.instructions.md
device-app/ledger-app-ai-instructions/skills/: SECURITY.REVIEW.md
device-app/src/: certs.rs  crypto.rs  main.rs  session.rs  sleeve.rs  state.rs  wordlist.rs
device-app/src/app_ui/: library.rs  menu.rs
device-app/src/handlers/: art.rs  collection.rs  cut.rs  info.rs  pair.rs  press.rs  verify.rs
docs/: m5-hardware.md  protocol.md
docs/art/: README.md
docs/screens/full-demo/: demo.html  out-cut.txt  out-pair.txt  out-press.txt  out-verify.txt  wire.json
relay/: cockpit.py  demo.py  demo_steps.py  hid_device.py
scripts/: art-sweep.sh  art-test.sh  attach-usb.ps1  bind-flex.ps1  build-demo-page.py  build.sh  capture-changes.sh  capture-detail.sh  check-packing.py  cockpit.sh  compose_gif.py  env.sh  errs.sh  install-ca.sh  load.sh  make-icons.py  nbgl-src.sh  nbgl-symbols.sh  nvm-ceiling.sh  pilot-check.sh  ping.sh  rebuild-clean-sdk.sh  sdk-checkout.sh  sdk-survey.sh  sections.sh  shot.sh  show-sleeve.sh  storyboard-full.sh  tap.sh  test.sh
tests/: conftest.py  mitm.py  presse_client.py  test_m2_boot.py  test_m3_ceremony.py  test_m4_adversarial.py  test_m5_library.py
