[package]
name = "presse"
version = "0.1.0"
authors = ["sylve"]
edition = "2021"

[dependencies]
ledger_device_sdk = {version = "*", features = ["io_new"]}

# Vendored copy carrying the home action-button support (candidate upstream
# PR to ledger-device-rust-sdk; keep the diff minimal and PR-shaped).
[patch.crates-io]
ledger_device_sdk = { path = "vendor/ledger_device_sdk" }

[build-dependencies]
# Decode the source GIFs and write the processed grayscale PNG glyph without
# pulling the full `image` crate (and its color-management stack). The luma
# conversion in build.rs reproduces `image::into_luma8()`.
gif = "0.14"
png = "0.18"

[features]
default = ["ledger_device_sdk/nano_nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Presse"
nanosplus = { icon = "icons/crab_14x14.gif" }
nanox = { icon = "icons/crab_14x14.gif" }
stax = { icon = "icons/vinyl_32x32.gif" }
flex = { icon = "icons/vinyl_40x40.gif" }
apex_p = { icon = "icons/crab_32x32.png" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }
